@@ -1,3 +1,7 @@
+2011-08-18  Richard Sandiford  <richard.sandiford@linaro.org>
+
+	* config/arm/bpabi-lib.h (RENAME_LIBRARY_SET): Delete.
+
 2011-08-17  Richard Sandiford  <richard.sandiford@linaro.org>
 
 	PR target/50090
